# einvoice

malaysiainvoice/: README.md  patches.txt  pyproject.toml
malaysiainvoice/custom/: generateinvoice.py
malaysiainvoice/malaysiainvoice/: hooks.py  modules.txt
malaysiainvoice/malaysiainvoice/custom/: sales_invoice.js
malaysiainvoice/malaysiainvoice/patches/: client_credentials.py  item_fields.py  sales_invoice_fields.py  supplier_fields.py
malaysiainvoice/patches/: customer_fields.py
